--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ nav.navs .nav-links li a:before {
   position: relative;
   width: 100%;
   height: auto;
-  background: url("Back.jpg");
+  background: url("img/Back.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -682,7 +682,7 @@ nav.navs .nav-links li a:before {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 4rem;
+  padding: 2rem 4rem;
 }
 
 @media (max-width: 1000px) {
