--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,14 @@ nav {
           animation: navss ease-in-out 0.5s;
 }
 
+nav h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 @media (max-width: 1000px) {
-  nav h1 {
+  nav h2 {
     padding: 20px 0;
   }
 }
