--- a/css/style.scss
+++ b/css/style.scss
@@ -53,7 +53,10 @@ nav {
     z-index: 10;
     animation: navss ease-in-out 0.5s;
     
-    h1{
+    h2{
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
         @include seven {
             padding: 20px 0;
         }
