--- a/css/style.css
+++ b/css/style.css
@@ -160,10 +160,10 @@ nav.navs .nav-links li a:before {
 }
 
 .p-bar .bars {
-  width: 1.5rem;
+  width: 2rem;
   opacity: 0;
   position: absolute;
-  top: 23px;
+  top: 2.5rem;
   right: 30px;
   cursor: pointer;
 }
@@ -182,7 +182,7 @@ nav.navs .nav-links li a:before {
 
 @media (max-width: 500px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 66px;
   }
 }
@@ -193,6 +193,9 @@ nav.navs .nav-links li a:before {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
@@ -752,7 +755,7 @@ nav.navs .nav-links li a:before {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 2rem 0rem;
+  padding: 3rem 0rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -780,12 +783,6 @@ nav.navs .nav-links li a:before {
 .best .content .contenttoo #first-box:hover {
   -webkit-transform: translateY(-5%);
           transform: translateY(-5%);
-}
-
-.best .content .contenttoo #first-box img {
-  background-size: cover;
-  background-position: center;
-  height: 20rem;
 }
 
 .best .content .contenttoo #first-box.box1 {
@@ -823,12 +820,6 @@ nav.navs .nav-links li a:before {
   opacity: 1;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
-}
-
-.best .content .contenttoo #second-box img {
-  background-size: cover;
-  background-position: center;
-  height: 20rem;
 }
 
 .best .content .contenttoo #second-box:hover {
@@ -913,8 +904,8 @@ nav.navs .nav-links li a:before {
   background: white;
   width: 100%;
   height: 100%;
-  padding: 0.8rem;
-  margin: 1rem 0.7rem;
+  padding: 0.5rem;
+  margin: 0.5rem 0.7rem;
   position: relative;
   -webkit-box-shadow: 0 6px 9px rgba(0, 0, 0, 0.2);
           box-shadow: 0 6px 9px rgba(0, 0, 0, 0.2);
@@ -922,13 +913,17 @@ nav.navs .nav-links li a:before {
 
 @media (max-width: 1000px) {
   .best .content .contenttoo .box {
-    margin: 1rem 0.3em;
+    margin: 1rem;
+    padding: 0.7rem;
   }
 }
 
 .best .content .contenttoo .box .img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
+  background-size: cover;
+  background-position: center;
+  height: 23rem;
 }
 
 .best .content .contenttoo .box .contentin {
