--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body {
   overflow-x: hidden;
 }
 
+@media (max-width: 500px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,15 +37,15 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   padding: 1rem 4rem;
   min-height: 10vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-transition: 0.20s ease-in-out;
   transition: 0.20s ease-in-out;
   z-index: 10;
@@ -115,6 +121,7 @@ nav h2 {
             align-items: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    padding: 0.5rem 4rem;
   }
 }
 
@@ -128,7 +135,7 @@ nav.navs {
 
 @media (max-width: 1000px) {
   nav.navs {
-    padding: 0 1.5rem;
+    padding: 0 2rem;
   }
 }
 
@@ -219,6 +226,12 @@ nav.navs .nav-links li a:before {
     max-height: 0;
     width: 100%;
     overflow: hidden;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -231,7 +244,7 @@ nav.navs .nav-links li a:before {
 
 @media (max-width: 500px) {
   .nav-links li {
-    padding: 40px 0;
+    padding: 35px 0;
     text-align: center !important;
   }
 }
@@ -924,6 +937,12 @@ nav.navs .nav-links li a:before {
   background-size: cover;
   background-position: center;
   height: 23rem;
+}
+
+@media (max-width: 500px) {
+  .best .content .contenttoo .box .img {
+    height: 20rem;
+  }
 }
 
 .best .content .contenttoo .box .contentin {
