--- a/css/style.css
+++ b/css/style.css
@@ -916,6 +916,7 @@ nav.navs .nav-links li a:before {
   position: relative;
   -webkit-box-shadow: 0 6px 9px rgba(0, 0, 0, 0.2);
           box-shadow: 0 6px 9px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 @media (max-width: 1000px) {
