--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,10 @@
     @media (max-width: 1000px) { @content};
 }
 
+@mixin res {
+    @media (max-width: 800px) {@content};
+}
+
 @mixin five {
     @media (max-width: 500px) {@content};
 }
@@ -56,11 +60,24 @@ nav {
     transition: 0.20s ease-in-out;
     z-index: 10;
     animation: navss ease-in-out 0.5s;
-    
-    h2{
+        
+    .title {
+        z-index: 1;
+        font-size: 1.3rem;
+        cursor: pointer;
+        padding-top: 0.5rem;
+        
         @include seven {
-            padding: 15px 0;
+            margin: auto 0;
+            padding-top: 10px;
         }
+
+        @include five {
+            font-size: 1.7rem;
+            line-height: 66px;
+            padding-top: 0.4rem;
+        }
+
     }
     
     @keyframes navss {
@@ -118,7 +135,7 @@ nav {
 }
 
 
-.p-bar{
+ .p-bar{
     opacity: 0;
     position: absolute;
     top: -5px;
@@ -130,7 +147,7 @@ nav {
         width: 2rem;
         opacity: 0;
         position: absolute;
-        top: 2.3rem;
+        top: 1.6rem;
         right: 30px;
         cursor: pointer;
         @include five {
@@ -140,31 +157,22 @@ nav {
 
 }
 
-.title {
-    z-index: 1;
-    font-size: 1.3rem;
-    cursor: pointer;
-
-
-    @include five {
-        font-size: 1.7rem;
-        line-height: 66px;
-    }
-
-}
-
 .nav-links {
     z-index: 1;
     display: flex;
     list-style: none;
     align-items:center;
+    padding: 1rem 0 0 0;
     transition:0.25s ease-in-out;
     @include five{
+        padding: 0;
         font-size: 0.9rem;
     }
     
     &.idknav{
             padding-top: 0rem;
+            display: flex;
+            align-items:center;
             max-height:60vh;
             transition:0.25s ease-in-out;
     }
@@ -378,6 +386,11 @@ nav {
                 
                 font-size: 3.5em;
                 line-height: 65px;
+                font-weight:bold;
+
+                @include five {
+                    line-height: 35px;
+                }
 
                 @include seven {
                    font-size: 2rem;
@@ -430,6 +443,7 @@ nav {
             h2{
                 font-size: 4rem;
                 padding: 0;
+                font-weight:bold;
                 
 
                 @include seven {
@@ -500,333 +514,48 @@ nav {
     position: relative; 
     width: 100%;
     height: auto;
-    background:url('img/Back.jpg');
+    background:url('back.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding: 3rem 2rem;
 
-    .opac {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: black;
-        opacity: 0.8;
+    @include five {
+        padding: 2rem 1rem;
     }
 
-    .content {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        padding: 2rem 4rem;
-     
-        @include seven {    
-            padding: 2rem 0rem;
-        } 
+    .card {
+        margin: 1rem;
 
-        #best-title{
-            padding: 1rem 0;
-            font-size: 3.5rem;
-            color: white;
-            margin: 0 auto;
-            position: relative;
-            width: 100%;
-            
-            h2 {
-                text-align: center;
-                font-size: 4rem;
-
-                @include seven {
-                    font-size: 3rem;
-                }
-            }
-
-
-            &.titles{
-               animation: btitle 1s ease-in-out;
-            }
-
-            @keyframes btitle {
-                0%{
-                    opacity: 0.5;
-                    transform: translateY(-50%);
-                }
-                100%{
-                    opacity: 1;
-                    transform: translateY(0%);
-                }
-            }
-
-        }
-
-        .contenttoo {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            padding: 3rem 0rem;
-            display: flex;
-            flex-direction: row;
-
-    
-
-            @include seven {
-                flex-wrap: wrap;
-                padding: 1rem 1rem;
-            }
-
-            #first-box {
-                opacity: 1;
-                cursor:pointer;
-                transition: 0.5s ease-in-out;;
-
-                &:hover {
-                    transform: translateY(-5%);
-                }
-                &.box1{
-                    animation: first-box 1.5s ease-in-out;
-                 }
-     
-                 @keyframes first-box {
-                     0%{
-                         opacity: 0;
-                         transform: translateY(50%);
-                     }
-                     100%{
-                         opacity: 1;
-                         transform: translateY(0%);
-                     }
-                 }
-            }
-
-            
-            #second-box {
-                opacity: 1;
-                transition: 0.5s ease-in-out;;
-
-                   &:hover {
-                        transform: translateY(-5%);
-                    }
-
-                &.box2{
-                    animation: second-box 1.75s ease-in-out;
-                 }
-     
-                 @keyframes second-box {
-                     0%{
-                         opacity: 0;
-                         transform: translateY(50%);
-                     }
-                     100%{
-                         opacity: 1;
-                         transform: translateY(0%);
-                     }
-                 }
-            }
-
-            
-            #third-box {
-                opacity: 1;
-                transition: 0.5s ease-in-out;
-
-                    &:hover {
-                        transform: translateY(-5%);
-                    }
-
-                &.box3{
-                    animation: third-box 2s ease-in-out;
-                 }
-     
-                 @keyframes third-box {
-                     0%{
-                         opacity: 0;
-                         transform: translateY(50%);
-                     }
-                     100%{
-                         opacity: 1;
-                         transform: translateY(0%);
-                     }
-                 }
-            }   
-
-         
-                .box {
-                    background: white;
-                    width: 100%;
-                    height: 100%;
-                    padding: 0.5rem;
-                    margin: 0.5rem 0.7rem;
-                    position: relative;
-                    box-shadow: 0 6px 9px rgba(0,0,0,0.2);
-                    cursor: pointer;
-
-                    @include seven {
-                        margin: 1rem;
-                        padding: 0.7rem;
-                    }
-
-                    .img {
-                        max-width: 100%;
-                        height: auto;
-                        background-size: cover;
-                        background-position: center;
-                        height: 23rem;
-
-                        @include five {
-                            height: 20rem;
-                        }
-                    }
-
-                        .contentin {
-                           padding: 0.5rem 0;
-
-                                p {
-                                    font-size: 0.8rem;
-                                }
-                            
-                        }
-
-                }
-        }
-
-        }
-
-}
-
-.contact{
-    position: relative;
-    width: 100%;
-    height: auto;
-    background: white;
-
-    
-    .content {
-        padding:  4rem;
-        text-align:left;
-        
-        @include seven {
-           padding: 1.5rem 1rem;
-          }
-
-         @include five {
-             padding: 1.5rem 2rem;
-         } 
-
-        .text {
-            text-align: center;
-            font-size: 3rem;
+        h4 {
             font-weight: bold;
-            padding: 1rem 0 0 0;
-
-            @include five {
-                font-size: 2.5rem;
-                padding: 2rem 0 0 0;
-            }
-
-            @include seven {
-                padding: 0.5rem 0 0 0 ;
-            }
-
         }
-        
 
-            .icons {
-                position: relative;
-                display: flex;
-                flex-direction: row;
-                justify-content:center;
-                align-items: center;
-                width: 100%;
-                height: 100%;
-                padding: 1rem;
-                margin: 2rem 0;
-                flex-wrap: wrap;
-                
-                @include seven {
-                    padding: 0rem 1rem;
-                    justify-content: start;
-                }
-
-                @include five {
-                    flex-direction: column;
-                }
-
-                .sec {
-                    padding:1.5rem 1rem;
-                    display: flex;
-                    align-items: center;
-                    font-size: 1.5rem;
-                    text-align: left;
-
-                    @include five {
-                        font-size: 1rem;
-                    }
-
-                    @include seven {
-                        padding: 0.8rem 1rem;
-                    }
-
-                    img {
-                        width: 2rem;
-                        margin: 0 1rem;
-                    }
-                }
-
+        .card-img-top {
+            height: 23rem;
+            @include res {
+                height: 30rem;
             }
-
+        }
     }
 
 }
 
 footer {
     position: relative;
+    width: 100%;
     background: #161515;
     color: #979797;
+    margin: auto 0;
+    padding: 1rem 3rem;
 
-    .content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0rem 4rem;
-      
-
-        @include seven {
-            flex-wrap: wrap;
-            margin: 0 auto;
-        }
-
-        .links {
-            padding: 0.8rem 0;
-            display: flex;
-            
-            @include seven {
-                margin: 0 auto;
-                padding: 0.5rem 0;
-            }
-
-            .sec {
-                display: flex;
-                align-items: center;
-                @include seven {
-                    margin: 1rem 0;
-                }
-
-                img {
-                    width: 1.5rem;
-                    margin: 0.5rem;
-                    cursor:pointer;
-                }
-            }
-        }
 
         h3 {
             font-size: 0.8rem;
-
+            
             @include seven {
                 padding-bottom: 1rem;
             }
         }
-
-    }
 
 }
