--- a/css/style.css
+++ b/css/style.css
@@ -57,21 +57,26 @@ nav .title {
   z-index: 1;
   font-size: 1.3rem;
   cursor: pointer;
-  padding-top: 0.5rem;
-}
-
-@media (max-width: 1000px) {
-  nav .title {
-    margin: auto 0;
-    padding-top: 10px;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.5rem 0  0 0;
 }
 
 @media (max-width: 500px) {
   nav .title {
     font-size: 1.7rem;
-    line-height: 66px;
-    padding-top: 0.4rem;
+    line-height: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1.7rem 0 0 0;
   }
 }
 
@@ -180,7 +185,7 @@ nav.navs .nav-links li a:before {
   width: 2rem;
   opacity: 0;
   position: absolute;
-  top: 1.6rem;
+  top: 1.1rem;
   right: 30px;
   cursor: pointer;
 }
@@ -207,8 +212,8 @@ nav.navs .nav-links li a:before {
 
 @media (max-width: 500px) {
   .nav-links {
-    padding: 0;
     font-size: 0.9rem;
+    padding: 0 0 0 0;
   }
 }
 
