--- a/css/style.scss
+++ b/css/style.scss
@@ -65,17 +65,16 @@ nav {
         z-index: 1;
         font-size: 1.3rem;
         cursor: pointer;
-        padding-top: 0.5rem;
-        
-        @include seven {
-            margin: auto 0;
-            padding-top: 10px;
-        }
+        display: flex;
+        align-items:center;
+        padding: 0.5rem 0  0 0;
 
         @include five {
             font-size: 1.7rem;
-            line-height: 66px;
-            padding-top: 0.4rem;
+            line-height: 0px;
+            display: flex;
+            align-items:center;
+            padding: 1.7rem 0 0 0;
         }
 
     }
@@ -147,7 +146,7 @@ nav {
         width: 2rem;
         opacity: 0;
         position: absolute;
-        top: 1.6rem;
+        top: 1.1rem;
         right: 30px;
         cursor: pointer;
         @include five {
@@ -165,8 +164,8 @@ nav {
     padding: 1rem 0 0 0;
     transition:0.25s ease-in-out;
     @include five{
-        padding: 0;
         font-size: 0.9rem;
+        padding: 0 0 0 0;
     }
     
     &.idknav{
